--- a/myapp/src/index.css
+++ b/myapp/src/index.css
@@ -12,12 +12,12 @@ code {
     monospace;
 }
 
-.blackButton {
+.Done {
   background-color: black !important;
   color: white !important;
 }
 
-.whiteButton {
+.NotDone {
   background-color: white !important;
   color: black !important;
 }
